# testing-agent-explorer

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
docs/research/: per-175-full-integration-plan.md
explorer/: __init__.py  affordance_builder.py  affordances.py  analyzer.py  appium_client.py  axe_client.py  cdp_text_input.py  cli.py  defect_detector.py  engine.py  episodic_memory.py  expression.py  form_filler.py  go_explore.py  goal_schema.py  grid_scanner.py  grounder_client.py  llm_client.py  llm_loop.py  loop.py  loop_breaker.py  mcts.py  models.py  modes.py  navigator.py  platform_adapter.py  role_resolver.py  scenario_runner.py  screen_id.py  simulator.py  strategy.py  vision_client.py  visualizer.py  worker.py
explorer/agents/: __init__.py  ambiguity.py  base.py  critic.py  grounder.py  memory.py  perception.py  planner.py  safety.py  vision_context.py
explorer/bus/: __init__.py  envelope.py  runner.py  streams.py
explorer/planning/: __init__.py  core.py  hints.py
scripts/: start-bus-runners.sh  stop-bus-runners.sh
tests/: conftest.py  test_affordance_builder.py  test_affordances.py  test_bus_chain.py  test_bus_handlers.py  test_engine.py  test_episodic_memory.py  test_go_explore.py  test_goal_node.py  test_integration_mesh.py  test_keypad_macro.py  test_mcts.py  test_modes.py  test_pin_and_guards.py  test_platform_adapter.py  test_simulator_clone.py  test_vision_context.py  test_worker_real_executor.py
worker_runs/0bf1803e-a661-46a8-b1db-6e07df56108d/: diagram.mmd  graph.json  report.txt
(+27 files in other folders)
